--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,12 +13,12 @@ ol a {
 
 h2{
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     font-size: 20px;
 }
 
 h3 {
-    color:#262123;
+    color:#261b25;
 }
 
   
@@ -35,7 +35,7 @@ h3 {
     left: 50%; 
     margin-left: -60px;
     background-color: powderblue;
-    color: #262123;
+    color: #261b25;
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
@@ -71,7 +71,7 @@ h3 {
     
 .links a:any-link   {
     font-size: 18px;
-    background-color: #262123;
+    background-color: #261b25;
     text-decoration: none;
     padding: 5px;
     color: powderblue;
@@ -133,7 +133,7 @@ main {
     flex-direction: row;
     justify-content: space-around;
     padding:.5em;
-    background-color: #262123;
+    background-color: #261b25;
     position: sticky;
     top:0;
 }
@@ -171,15 +171,15 @@ button {
 	margin: 0 0.3125em;
 	//padding: .2em;
 	border: 1px solid #fff;
-	background-color: #262123;
+	background-color: #261b25;
 	font-weight: bold;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 button#increasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
-    //background:linear-gradient(#262123, grey);
+    background-color: #261b25;
+    //background:linear-gradient(#261b25, grey);
 	font-size: 1.2em;
     padding: .5em;
     color:powderblue;
@@ -187,8 +187,8 @@ button#increasetext {
 
 button#resettext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
-    //background:linear-gradient(#262123, grey);
+    background-color: #261b25;
+    //background:linear-gradient(#261b25, grey);
 	font-size: 1.2em;
     padding-top: .5em;
     padding-bottom: .5em;
@@ -199,8 +199,8 @@ button#resettext {
 
 button#decreasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
-    //background: linear-gradient(#262123, grey);
+    background-color: #261b25;
+    //background: linear-gradient(#261b25, grey);
 	font-size: 1.2em;
     padding: .5em;
     color:powderblue;
@@ -211,7 +211,7 @@ button#decreasetext {
 #footer {
     padding: 1em;
     grid-area: f;
-    background-color: #262123;
+    background-color: #261b25;
 }
 
 #footer{
@@ -320,7 +320,7 @@ button#decreasetext {
 }
 
 #content a:any-link {
-    color:#262123;
+    color:#261b25;
 }
 
 #content .info{
@@ -360,9 +360,9 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #262123);
-    background-color: #262123;
-    border: 1px #262123 solid;
+    //background: radial-gradient(powderblue, #261b25);
+    background-color: #261b25;
+    border: 1px #261b25 solid;
     box-shadow: 1px 1px 8px rgba(38, 33, 35, 0.6);
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -381,8 +381,8 @@ button#decreasetext {
 }
 
 #BackToTop a:any-link {
-    color: #262123;
-    //background-color: #262123;
+    color: #261b25;
+    //background-color: #261b25;
     //border: 1px #4c6063 solid;
     padding: 1em;
     text-decoration: none;
@@ -529,7 +529,7 @@ button#decreasetext {
     flex-direction: row;
     justify-content: space-between;
     border-bottom: 1px rgba(38, 33, 35, 0.6) solid;
-    color: #262123;
+    color: #261b25;
     }
     
 
@@ -576,7 +576,7 @@ button#decreasetext {
 #sampleVideos h2{
     grid-row-start: 1;
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     font-size: 20px;
 }
 
@@ -646,7 +646,7 @@ button#decreasetext {
 
 
 .thumbnail {
-    border: 1px #262123 solid;
+    border: 1px #261b25 solid;
     -moz-box-shadow:    inset 10 10 10px #000000;
    -webkit-box-shadow: inset 10 10 10px #000000;
    box-shadow:         inset 10 10 10px #000000;
@@ -706,7 +706,7 @@ button#decreasetext {
     flex-direction: row;
     justify-content: space-around;
     padding:.5em;
-    background-color: #262123;
+    background-color: #261b25;
 }
 
 .vidmenu > div { 
@@ -745,7 +745,7 @@ button#decreasetext {
     
 #breadcrumb ol li a:any-link{
     padding: 10px;
-    color:#262123;
+    color:#261b25;
     font-family: 'Source Sans Pro', sans-serif;
     }
     
@@ -780,8 +780,8 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #262123);
-    background-color: #262123;
+    //background: radial-gradient(powderblue, #261b25);
+    background-color: #261b25;
     border: 2px powderblue solid;
     //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -807,7 +807,7 @@ button#decreasetext {
 #googleform {
     grid-row-start: 1;
     grid-column-start: 2;
-    border: 2px #262123 solid;
+    border: 2px #261b25 solid;
 }
 
 
@@ -834,7 +834,7 @@ button#decreasetext {
         
 .links a:any-link   {
     font-size: 18px;
-    background-color: #262123;
+    background-color: #261b25;
     text-decoration: none;
     padding: 5px;
     color: powderblue;
@@ -895,7 +895,7 @@ main {
     flex-direction: row;
     justify-content: space-around;
     padding:.2em;
-    background-color: #262123;
+    background-color: #261b25;
     position: sticky;
     top:0;
 }
@@ -932,14 +932,14 @@ button {
 	margin: 0 0.3125em;
 	padding: .2em;
 	border: 1px solid #fff;
-	background-color: #262123;
+	background-color: #261b25;
 	font-weight: bold;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 button#increasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-left: .3em;
     padding-right: .3em;
@@ -950,7 +950,7 @@ button#increasetext {
 
 button#resettext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-top: .2em;
     padding-bottom: .2em;
@@ -961,7 +961,7 @@ button#resettext {
 
 button#decreasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-left: .3em;
     padding-right: .3em;
@@ -975,7 +975,7 @@ button#decreasetext {
 #footer {
     padding: 1em;
     grid-area: f;
-    background-color: #262123;
+    background-color: #261b25;
 }
 
 #footer{
@@ -1082,7 +1082,7 @@ button#decreasetext {
 }
 
 #content a:any-link {
-    color:#262123;
+    color:#261b25;
 }
 
 #content .info{
@@ -1122,9 +1122,9 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #262123);
-    background-color: #262123;
-    border: 2px #262123 solid;
+    //background: radial-gradient(powderblue, #261b25);
+    background-color: #261b25;
+    border: 2px #261b25 solid;
     //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -1148,12 +1148,12 @@ button#decreasetext {
 #content #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
 #BackToTop a:any-link {
-    color: #262123;
+    color: #261b25;
     padding: .5em;
     text-decoration: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -1274,7 +1274,7 @@ button#decreasetext {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    color: #262123;}
+    color: #261b25;}
     
 #benefits .requestTrial{
     grid-row-start: 6;
@@ -1307,7 +1307,7 @@ button#decreasetext {
 #benefits #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
@@ -1332,13 +1332,13 @@ button#decreasetext {
 #sampleVideos h2{
     grid-row-start: 1;
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     font-size: 20px;
 }
 
 #sampleVideos p{;
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     text-align: center;
 }
     
@@ -1413,7 +1413,7 @@ button#decreasetext {
 #sampleVideos #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
@@ -1424,7 +1424,7 @@ button#decreasetext {
     }
     
 .thumbnail {
-    border: 1px #262123 solid;
+    border: 1px #261b25 solid;
     opacity: 1;
     display: block;
     width: 100%;
@@ -1479,7 +1479,7 @@ button#decreasetext {
     flex-direction: row;
     justify-content: space-around;
     padding:.5em;
-    background-color: #262123;
+    background-color: #261b25;
 }
 
 .vidmenu > div { 
@@ -1519,7 +1519,7 @@ button#decreasetext {
 #breadcrumb ol li a:any-link{
     padding: 10px;
     padding-left: 0px;
-    color:#262123;
+    color:#261b25;
     font-family: 'Source Sans Pro', sans-serif;
     }
     
@@ -1554,8 +1554,8 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #262123);
-    background-color: #262123;
+    //background: radial-gradient(powderblue, #261b25);
+    background-color: #261b25;
     border: 2px powderblue solid;
     //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -1581,7 +1581,7 @@ button#decreasetext {
 #googleform {
     grid-row-start: 1;
     grid-column-start: 2;
-    border: 2px #262123 solid;
+    border: 2px #261b25 solid;
 }
 
     
@@ -1600,7 +1600,7 @@ button#decreasetext {
 #requestTrialForm #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
@@ -1627,7 +1627,7 @@ button#decreasetext {
 
 .links a:any-link   {
     font-size: 18px;
-    background-color: #262123;
+    background-color: #261b25;
     text-decoration: none;
     padding: 5px;
     color: powderblue;
@@ -1669,7 +1669,7 @@ main {
 }
 
 .dropbtn {
-    background-color: #262123;
+    background-color: #261b25;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -1693,7 +1693,7 @@ main {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #262123;
+    background-color: #261b25;
     min-width: 100%;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -1739,7 +1739,7 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: #262123;
+    background-color: #261b25;
     }
     
 #mobilelogo img   {
@@ -1770,14 +1770,14 @@ button {
 	margin: 0 0.3125em;
 	//padding: .2em;
 	border: 1px solid #fff;
-	background-color: #262123;
+	background-color: #261b25;
 	font-weight: bold;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 button#increasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-left: 3px;
     padding-right: 3px;
@@ -1788,7 +1788,7 @@ button#increasetext {
 
 button#resettext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-left: 5px;
     padding-right: 5px;
@@ -1799,7 +1799,7 @@ button#resettext {
 
 button#decreasetext {
     border: 1px #4c6063 solid;
-    background-color: #262123;
+    background-color: #261b25;
 	font-size: 1em;
     padding-left: 3px;
     padding-right: 3px;
@@ -1813,7 +1813,7 @@ button#decreasetext {
 #footer {
     padding: .2em;
     grid-area: f;
-    background-color: #262123;
+    background-color: #261b25;
 }
 
 #footer{
@@ -1919,11 +1919,11 @@ button#decreasetext {
 }
     
 #content .about a:any-link {
-    color:#262123;
+    color:#261b25;
 }
 
 .info {
-    background-color: #262123;
+    background-color: #261b25;
     }    
 
     
@@ -1992,8 +1992,8 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #262123);
-    background-color: #262123;
+    //background: radial-gradient(powderblue, #261b25);
+    background-color: #261b25;
     border: 2px powderblue solid;
     //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -2019,12 +2019,12 @@ button#decreasetext {
 #content #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
 #BackToTop a:any-link {
-    color: #262123;
+    color: #261b25;
     padding: .5em;
     text-decoration: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -2153,7 +2153,7 @@ button#decreasetext {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: #262123;
+    color: #261b25;
     }
     
 .links p a{
@@ -2187,12 +2187,12 @@ button#decreasetext {
 #benefits #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
 #BackToTop a:any-link {
-    color: #262123;
+    color: #261b25;
     padding: .5em;
     text-decoration: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -2224,13 +2224,13 @@ button#decreasetext {
 #sampleVideos h2{
     grid-row-start: 1;
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     font-size: 20px;
 }
 
 #sampleVideos p{;
     font-family: 'Source Sans Pro', sans-serif;
-    color:#262123;
+    color:#261b25;
     text-align: center;
 }
     
@@ -2303,12 +2303,12 @@ button#decreasetext {
 #sampleVideos #BackToTop:hover{
     opacity: 1;
     font-weight: bold;
-    text-shadow: 1px 1px 1px 1px #262123;
+    text-shadow: 1px 1px 1px 1px #261b25;
     background-color: rgba(250, 250, 250, 0.8);
     }
     
 #BackToTop a:any-link {
-    color: #262123;
+    color: #261b25;
     padding: .5em;
     text-decoration: none;
     font-family: 'Source Sans Pro', sans-serif;
@@ -2325,7 +2325,7 @@ button#decreasetext {
     }
     
 .thumbnail {
-    border: 1px #262123 solid;
+    border: 1px #261b25 solid;
     opacity: 1;
     display: block;
     width: 100%;
@@ -2409,7 +2409,7 @@ button#decreasetext {
 #breadcrumb ol li a:any-link{
     padding: 10px;
     padding-left: 0px;
-    color:#262123;
+    color:#261b25;
     font-family: 'Source Sans Pro', sans-serif;
     }
     
@@ -2444,7 +2444,7 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    background-color: #262123;
+    background-color: #261b25;
     border: 2px powderblue solid;
     //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
@@ -2470,7 +2470,7 @@ button#decreasetext {
 #googleform {
     grid-row-start: 1;
     grid-column-start: 2;
-    border: 2px #262123 solid;
+    border: 2px #261b25 solid;
 }
 
     
