--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,7 +80,7 @@ h3 {
     
 #container {
     position: relative;
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
     margin-left:auto;
     margin-right: auto;
     max-width: 1500px;
@@ -96,7 +96,7 @@ h3 {
 
 main {
     display: inline-grid;
-    background: #F5F5DC;
+    background: #dbdbdb;
     margin: 0;
 }
 
@@ -221,7 +221,7 @@ button#decreasetext {
 #companydetails #SimVirtua {
     display: flex;
     flex-direction: column;
-    color: #F5F5DC;
+    color: #dbdbdb;
     font-family:'Source Sans Pro', sans-serif; 
 }
 
@@ -730,7 +730,7 @@ button#decreasetext {
     display: grid;
     grid-template-columns: .5fr 11fr .5fr;
     grid-template-rows: repeat(5, auto);
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
 }
 
 #breadcrumb {
@@ -843,7 +843,7 @@ button#decreasetext {
     
 #container {
     position: relative;
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
     margin-left:auto;
     margin-right: auto;
     display: grid;
@@ -858,7 +858,7 @@ button#decreasetext {
 
 main {
     display: inline-grid;
-    background: #F5F5DC;
+    background: #dbdbdb;
     margin: 0;
 }
 
@@ -985,7 +985,7 @@ button#decreasetext {
 #companydetails #SimVirtua {
     display: flex;
     flex-direction: column;
-    color: #F5F5DC;;
+    color: #dbdbdb;;
     font-family:'Source Sans Pro', sans-serif; 
 }
 
@@ -1503,7 +1503,7 @@ button#decreasetext {
     display: grid;
     grid-template-columns: .5fr 11fr .5fr;
     grid-template-rows: repeat(4, auto);
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
 }
 
 #breadcrumb {
@@ -1635,7 +1635,7 @@ button#decreasetext {
     
 #container {
     position: relative;
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
     margin-left:auto;
     margin-right: auto;
     font-size: 16px;
@@ -1651,7 +1651,7 @@ button#decreasetext {
 
 main {
     display: inline-grid;
-    background: #F5F5DC;
+    background: #dbdbdb;
     margin: 0;
 }
 
@@ -1823,7 +1823,7 @@ button#decreasetext {
 #companydetails #SimVirtua {
     display: flex;
     flex-direction: column;
-    color: #F5F5DC;
+    color: #dbdbdb;
     font-family:'Source Sans Pro', sans-serif; 
 }
 
@@ -2393,7 +2393,7 @@ button#decreasetext {
     display: grid;
     grid-template-columns: .5fr 11fr .5fr;
     grid-template-rows: repeat(4, auto);
-    background-color: #F5F5DC;
+    background-color: #dbdbdb;
 }
 
 #breadcrumb {
