--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1162,6 +1162,7 @@ button#decreasetext {
     justify-content: center;
     border-radius: 10px;
     font-weight: bold;
+    text-align: center;
 }
 
 
