--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1285,8 +1285,9 @@ button#decreasetext {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    //align-content: center;
+    align-content: center;
     padding: 2em;
+    justify-content: center;
  }
 
 #benefits .requestTrialButton a{
