--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1417,7 +1417,8 @@ button#decreasetext {
     }
     
 .thumbnail {
-    border: 1px #261b25 solid;
+    border: 1px rgba(122, 118, 83, 0.6) solid;
+    box-shadow: 1px 1px 8px rgba(38, 33, 35, 0.6);
     opacity: 1;
     display: block;
     width: 100%;
