--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -80,7 +80,7 @@ h3 {
     
 #container {
     position: relative;
-    background-color: #dbdbdb;
+    background-color: white;
     margin-left:auto;
     margin-right: auto;
     max-width: 1500px;
@@ -96,7 +96,7 @@ h3 {
 
 main {
     display: inline-grid;
-    background: #dbdbdb;
+    background: white;
     margin: 0;
 }
 
@@ -110,7 +110,7 @@ main {
     grid-template-rows: 1fr;
     position: sticky;
     top: 0px;
-    border-bottom: 1px powderblue solid;
+    //border-bottom: 1px powderblue solid;
 }
     
 #mobilelogo {
@@ -360,15 +360,13 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #261b25);
     background-color: #261b25;
-    border: 1px #261b25 solid;
     box-shadow: 1px 1px 8px rgba(38, 33, 35, 0.6);
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 #content .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -546,7 +544,7 @@ button#decreasetext {
  }
 
 #benefits .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 } 
 
@@ -678,7 +676,7 @@ button#decreasetext {
 
 
 #sampleVideos .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -690,7 +688,7 @@ button#decreasetext {
     display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
-    border-bottom: 1px powderblue solid;
+    //border-bottom: 1px powderblue solid;
     line-height: 1.8;
 }
     
@@ -839,7 +837,7 @@ button#decreasetext {
     
 #container {
     position: relative;
-    background-color: #dbdbdb;
+    background-color: white;
     margin-left:auto;
     margin-right: auto;
     display: grid;
@@ -854,7 +852,7 @@ button#decreasetext {
 
 main {
     display: inline-grid;
-    background: #dbdbdb;
+    background: white;
     margin: 0;
 }
 
@@ -868,7 +866,7 @@ main {
     grid-template-rows: 1fr;
     position: sticky;
     top: 0px;
-    border-bottom: 1px powderblue solid;
+    //border-bottom: 1px powderblue solid;
 }
 
 #mobilelogo {
@@ -1109,24 +1107,22 @@ button#decreasetext {
  }
 
 .requestTrialButton {
-    color: powderblue;
+    color: white;
     justify-self: center;
-    padding-top: 2em;;
+    padding-top: 2em;
     padding-bottom: 2em;
     padding-left: 5em;
     padding-right: 5em;
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #261b25);
     background-color: #261b25;
-    border: 2px #261b25 solid;
-    //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
+    box-shadow: 1px 1px 4px rgba(38, 33, 35, 0.6);
 }
 
 #content .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -1277,7 +1273,7 @@ button#decreasetext {
     grid-row-start: 6;
     grid-column: 1/ span 3;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     align-content: center;
     padding: 2em;
@@ -1285,10 +1281,8 @@ button#decreasetext {
  }
 
 #benefits .requestTrialButton a{
-    grid-column-start: 2;
-    color: powderblue;
+    color: white;
     text-decoration: none;
-    align-self: center;
 } 
 
 #benefits #BackToTop {
@@ -1451,7 +1445,7 @@ button#decreasetext {
 
 
 #sampleVideos .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -1463,7 +1457,6 @@ button#decreasetext {
     display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
-    border-bottom: 1px powderblue solid;
 }
 .vidmenu {
     grid-row-start:1;
@@ -1626,7 +1619,7 @@ button#decreasetext {
     
 #container {
     position: relative;
-    background-color: #dbdbdb;
+    background-color: white;
     margin-left:auto;
     margin-right: auto;
     font-size: 16px;
@@ -1642,7 +1635,7 @@ button#decreasetext {
 
 main {
     display: inline-grid;
-    background: #dbdbdb;
+    background: white;
     margin: 0;
 }
 
@@ -1656,7 +1649,7 @@ main {
     grid-template-rows: 1fr;
     //position: sticky;
     //top: 0px;
-    border-bottom: 1px powderblue solid;
+    //border-bottom: 1px powderblue solid;
 }
 
 .dropbtn {
@@ -1978,7 +1971,7 @@ button#decreasetext {
  }
 
 .requestTrialButton {
-    color: powderblue;
+    color: white;
     justify-self: center;
     padding-left: 2em;
     padding-right: 2em;
@@ -1987,17 +1980,14 @@ button#decreasetext {
     justify-content: center;
     grid-row-start: 2;
     font-size: 18px;
-    //background: radial-gradient(powderblue, #261b25);
     background-color: #261b25;
-    border: 2px powderblue solid;
-    //border-radius: 15px;
     font-family: 'Source Sans Pro', sans-serif;
+    box-shadow: 1px 1px 4px rgba(38, 33, 35, 0.6);
 }
 
 #content .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
-    align-self: center;
 }
 
 #content #BackToTop {
@@ -2161,7 +2151,7 @@ button#decreasetext {
  }
 
 #benefits .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 } 
 
@@ -2344,7 +2334,7 @@ button#decreasetext {
 
 
 #sampleVideos .requestTrialButton a {
-    color: powderblue;
+    color: white;
     text-decoration: none;
 }
 
@@ -2356,7 +2346,7 @@ button#decreasetext {
     display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
-    border-bottom: 1px powderblue solid;
+    //border-bottom: 1px powderblue solid;
 }
 .vidmenu {
     display: none;
